fixed code/pre wrapping issue on mobile, updated packages, updated backend widths on posts for c9 grid

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -583,6 +583,13 @@ html :where(.editor-styles-wrapper) kbd {
         margin-left: -58px;
         margin-right: -58px;
     }
+
+    /* WordPress 6.1 backend widths for alignfull/alignwide and c9 grid inside of posts */
+    .is-sidebar-opened .editor-styles-wrapper .edit-post-visual-editor__post-title-wrapper>[data-type="c9-blocks/grid"]:where(:not(.alignleft):not(.alignright):not(.alignfull)),
+    .is-sidebar-opened .editor-styles-wrapper .block-editor-block-list__layout.is-root-container>[data-type="c9-blocks/grid"]:where(:not(.alignleft):not(.alignright):not(.alignfull)) {
+        margin-left: calc((-100vw + 280px + 100%)/2) !important;
+        margin-right: calc((-100vw + 280px + 100%)/2) !important;
+    }
 }
 
 @media only screen and (min-width: 1500px) {
